<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SubmitProjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dialog_margin"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:backgroundTint="#000000"
                    android:minHeight="?actionBarSize"
                    android:padding="@dimen/appbar_padding"
                    android:text="@string/leaderboad"
                    app:srcCompat="@drawable/ic_arrow_back" />


                <ImageView
                    android:layout_width="172dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    app:srcCompat="@drawable/gads" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_project_submission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gads2020yellow"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/project_sub_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_submit">

        <EditText
            android:id="@+id/edt_first_name"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="0.4"
            android:background="@drawable/style_edittext"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_last_name"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@drawable/style_edittext"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <EditText
        android:id="@+id/edt_email_address"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/style_edittext"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/edt_github_link"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/style_edittext"
        android:ems="10"
        android:hint="Project on GITHUB(link)"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edt_email_address"
        app:layout_constraintStart_toStartOf="@+id/edt_email_address"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_address" />

    <Button
        android:id="@+id/btn_submit_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_border_post_submit"
        android:text="@string/submit_btn"
        android:textColor="@color/gads2020white"
        app:layout_constraintEnd_toEndOf="@+id/edt_github_link"
        app:layout_constraintStart_toStartOf="@+id/edt_github_link"
        app:layout_constraintTop_toBottomOf="@+id/edt_github_link" />

</androidx.constraintlayout.widget.ConstraintLayout>